--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     transform: scale(1.05);
     z-index: -1;           
 }
-#enter {
+#log {
     background-color: rgba(0, 0, 0, 0.5);
     margin-top: 20%;
     margin-left: 40%;
@@ -35,4 +35,109 @@
 #password {
     width: 300px;
     height: 50px;
+}
+#homebody {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  box-sizing: border-box;
+}
+
+#homebody::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: blur(5px);
+  transform: scale(1.05);
+  z-index: -1;
+}
+
+#Homediv {
+  background-color: #f48c06;
+  width: 100%;
+  padding: 20px 0;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+}
+
+#infobuttons {
+  background-color: #e85d04;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+#infobuttons .infobutton {
+  height: 100px;
+  width: 50%;
+  background-color: #e85d04;
+  font-size: 24px;
+  border-radius: 50px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  color: white;
+}
+
+#infobuttons .infobutton:hover {
+  background-color: #f48c06;
+  color: aqua;
+  font-size: 28px;
+}
+
+#infoheading {
+  font-size: 50;
+  color: black;
+}
+
+#infop {
+  font-size: 35;
+  color: black;
+}
+
+#buttons {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  background-color: #f48c06;
+}
+
+#infobox {
+    width: 100%;
+    color: black;
+    background-color: #e85d04;
+    p {
+        font-size: 35px;
+    }
+    h1 {
+        font-size: 50px;
+    }
+}
+#buttons button {
+  width: 25%;
+  height: 100px;
+  font-size: 28px;
+  border-radius: 50px;
+  border: none;
+  background-color: #f48c06;
+  color: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+#buttons button:hover {
+  background-color: #e85d04;
+  color: aqua;
+  font-size: 30px;
 }
